--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h1>MEMBERS CLUB HOUSE</h1>
+
+<% @posts.each do |post| %> 
+
+    <h3> <%= post.title %></h3>
+    <p> <%= post.body %></p>
+<% if user_signed_in? %>
+  <p> Username: <%= post.user.username%></p>
+<% end %>
+<% end%>
+
+<p><%= link_to 'Sign Out',  destroy_user_session_path, method: :delete %></p>
+
+<p><%= link_to 'Sign Up',  new_user_registration_path%></p>
+
+<p><%= link_to 'New post', new_post_path %></p>
+
+<p><%= link_to 'LOG IN',   new_user_session_path %></p>
