--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,19 +1,19 @@
 <h1>MEMBERS CLUB HOUSE</h1>
 
 <% @posts.each do |post| %> 
-  <h3> <%= post.title %></h3>
-    <p> <%= post.body %></p>
+  <h3>Title: <%= post.title %></h3>
+    <p>Story: <%= post.body %></p>
    <% if user_signed_in? %>
         <p> Email: <%= post.user.email%></p>
    <% end %>
 <% end%>
 
+
+<% if user_signed_in? %>
 <p><%= link_to 'Sign Out',  destroy_user_session_path, method: :delete %></p>
-
-<p><%= link_to 'Sign Up',  new_user_registration_path%></p>
-
 <p><%= link_to 'New post', new_post_path %></p>
-
+<%else%>
+<p><%= link_to 'Sign Up',  new_user_registration_path%></p>
 <p><%= link_to 'LOG IN',   new_user_session_path %></p>
-
+<%end%>
 
